# CPU-benchmark

./: CMakeLists.txt  README.md
config/: config.txt
includes/: Application.h  Benchmark.h  ClearTerminal.h  ConfigLoader.h  EnableANSI.h  GetCPUName.h  GetUserInput.h  LoadingBar.h  Menu.h  PrintAndSaveResult.h
libs/: libConfigLoader.lib
src/: Application.cpp  Benchmark.cpp  ClearTerminal.cpp  ConfigLoader.cpp  EnableANSI.cpp  GetCPUName.cpp  GetUserInput.cpp  LoadingBar.cpp  Menu.cpp  PrintAndSaveResult.cpp  main.cpp
